# territory_sectors

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env-template  package-lock.json  package.json  pyproject.toml
.github/workflows/: coverage.yml  django-test.yml  linter-run.yml
Docker/certbot/: Dockerfile  docker-entrypoint.sh  nginx.conf
Docker/nginx/: Dockerfile  docker-entrypoint.sh  docker-setenv.sh  nginx-ssl.tmp  nginx.conf
Docker/postgis/: Dockerfile  env  init.sql
Docker/react/: Dockerfile  docker-entrypoint.sh
Docker/sectors/: Dockerfile  cronjob  docker-entrypoint.sh
app/: .env  Makefile  manage.py
app/territory_sectors/: consts_from_js.py  context_processors.py  mixins.py  process_Pdf_backup.py  schema.py  settings.py  urls.py  views.py
backup_bash_script/: backup.sh
bakup_bash_script/: backup.sh
frontend/: .env.development  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  DivMap.jsx  index.js
postgis/: Dockefile
territory_sectors/: asgi.py  context_processors.py  da.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
territory_sectors/flat/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
territory_sectors/house/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
territory_sectors/issue/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
territory_sectors/language/: admin.py  apps.py  models.py
territory_sectors/sector/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  (+1 more)
user_manual/: pamyatka-24-05.mht
(+245 files in other folders)
